Migrate old balancer to newly split up system