@@ -1,6 +1,9 @@
 package com.sbancuz.plannh;
 
 import java.io.File;
+import java.util.HashSet;
+import java.util.Locale;
+import java.util.Set;
 
 import net.minecraftforge.common.config.Configuration;
 
@@ -8,6 +11,47 @@ public final class Config {
 
     /** Dev diagnostic: log a headless repro of every arrow-routing recompute. */
     public static boolean debugRouteDump = false;
+
+    /**
+     * Drops the summary's Machine Counts section entirely rather than folding it: a fold is "not on
+     * this chart" and lives per slot, this is "never" and lives with the install.
+     */
+    public static boolean hideMachineCountsSection = false;
+
+    /**
+     * Ingredients nobody plumbs, so the wiring diagnostics stay quiet about them. Display names
+     * rather than registry ids: this is a nuisance filter the user edits by hand.
+     */
+    private static final String[] DEFAULT_FREE_INGREDIENTS = { "Water" };
+
+    /** {@link #DEFAULT_FREE_INGREDIENTS} folded to lower case for lookup. */
+    private static Set<String> freeIngredients = lowercased(DEFAULT_FREE_INGREDIENTS);
+
+    /** Whether wiring diagnostics should stay quiet about this ingredient. */
+    public static boolean isFreeIngredient(final String displayName) {
+        return freeIngredients.contains(
+            displayName.trim()
+                .toLowerCase(Locale.ROOT));
+    }
+
+    /** Replaces the free list. Names are matched case- and whitespace-insensitively from here on. */
+    public static void setFreeIngredients(final String... names) {
+        freeIngredients = lowercased(names);
+    }
+
+    public static void resetFreeIngredients() {
+        setFreeIngredients(DEFAULT_FREE_INGREDIENTS);
+    }
+
+    private static Set<String> lowercased(final String[] names) {
+        final Set<String> set = new HashSet<>();
+        for (final String name : names) {
+            set.add(
+                name.trim()
+                    .toLowerCase(Locale.ROOT));
+        }
+        return set;
+    }
 
     /**
      * How long the balancer is allowed to look for a better answer, as a percentage of the tuned
@@ -31,7 +75,7 @@ public final class Config {
      * later caller from assigning to it, and an unclamped percentage multiplies a 20-second budget.
      */
     public static int solverEffort() {
-        return Math.max(SOLVER_EFFORT_MIN, Math.min(SOLVER_EFFORT_MAX, solverEffortPercent));
+        return Math.clamp(solverEffortPercent, SOLVER_EFFORT_MIN, SOLVER_EFFORT_MAX);
     }
 
     public static void synchronizeConfiguration(final File configFile) {
@@ -42,6 +86,25 @@ public final class Config {
             "debug",
             false,
             "Log a replayable dump of the arrow-routing input on every route recompute");
+
+        hideMachineCountsSection = configuration.getBoolean(
+            "hideMachineCountsSection",
+            "gui",
+            false,
+            "Leave the Machine Counts section (per-machine operation counts, and the ops/cycle"
+                + " totals) out of the summary panel altogether, instead of folding it away");
+
+        setFreeIngredients(
+            configuration
+                .get(
+                    "solver",
+                    "freeIngredients",
+                    DEFAULT_FREE_INGREDIENTS,
+                    "Ingredients the solver never suggests wiring up. Display names, case"
+                        + " insensitive. Anything effectively free in the pack belongs here:"
+                        + " otherwise every chart that takes water from outside reports a missing"
+                        + " edge to whatever else happens to produce it.")
+                .getStringList());
 
         solverEffortPercent = configuration.getInt(
             "solverEffortPercent",
